// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse Collapse accordion demo works fine 1`] = `
<accordion>
  <t-collapse
    defaultValue="{{
      Array [
        0,
      ]
    }}"
    expandIcon="{{true}}"
    expandMutex="{{true}}"
  >
    <t-collapse-panel
      header="折叠面板标题"
      value="{{0}}"
    >
      
    此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容
  
    </t-collapse-panel>
    <t-collapse-panel
      header="折叠面板标题"
      value="{{1}}"
    >
      
    此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容
  
    </t-collapse-panel>
    <t-collapse-panel
      header="折叠面板标题"
      value="{{2}}"
    >
      
    此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容
  
    </t-collapse-panel>
    <t-collapse-panel
      disabled="{{true}}"
      header="折叠面板标题"
      value="{{3}}"
    >
      
    此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容
  
    </t-collapse-panel>
  </t-collapse>
</accordion>
`;

exports[`Collapse Collapse action demo works fine 1`] = `
<action>
  <wx-view
    class="wrapper"
  >
    <t-collapse
      value="{{
        Array [
          0,
        ]
      }}"
      bind:change="handleChange"
    >
      <t-collapse-panel
        expandIcon="{{true}}"
        header="折叠面板标题"
        headerRightContent="收起"
        value="{{0}}"
      >
        
      此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容
    
      </t-collapse-panel>
    </t-collapse>
  </wx-view>
</action>
`;

exports[`Collapse Collapse base demo works fine 1`] = `
<base>
  <wx-view
    class="wrapper"
  >
    <t-collapse
      value="{{
        Array [
          0,
        ]
      }}"
      bind:change="handleChange"
    >
      <t-collapse-panel
        expandIcon="{{true}}"
        header="折叠面板标题"
        value="{{0}}"
      >
        
      此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容
    
      </t-collapse-panel>
    </t-collapse>
  </wx-view>
</base>
`;

exports[`Collapse Collapse placement demo works fine 1`] = `
<placement>
  <wx-view
    class="wrapper"
  >
    <t-collapse
      value="{{
        Array [
          0,
        ]
      }}"
      bind:change="handleChange"
    >
      <t-collapse-panel
        expandIcon="{{true}}"
        header="折叠面板标题"
        placement="top"
        value="{{0}}"
      >
        
      此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容
    
      </t-collapse-panel>
    </t-collapse>
  </wx-view>
</placement>
`;

exports[`Collapse Collapse theme demo works fine 1`] = `
<theme>
  <t-collapse
    defaultValue="{{
      Array [
        0,
      ]
    }}"
    expandIcon="{{true}}"
    expandMutex="{{true}}"
    theme="card"
  >
    <t-collapse-panel
      header="折叠面板标题"
      value="{{0}}"
    >
      
    此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容
  
    </t-collapse-panel>
    <t-collapse-panel
      header="折叠面板标题"
      value="{{1}}"
    >
      
    此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容
  
    </t-collapse-panel>
    <t-collapse-panel
      header="折叠面板标题"
      value="{{2}}"
    >
      
    此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容
  
    </t-collapse-panel>
    <t-collapse-panel
      disabled="{{true}}"
      header="折叠面板标题"
      value="{{3}}"
    >
      
    此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容此处可自定义内容
  
    </t-collapse-panel>
  </t-collapse>
</theme>
`;
